short cut UI equipped

--- a/popup.html
+++ b/popup.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>テンプレート管理</title>
+    <title>ショートカット管理</title>
     <style>
         body { font-family: Arial, sans-serif; padding: 10px; width: 300px; }
-        .template-container { margin-bottom: 10px; }
-        .template-number { font-weight: bold; margin-right: 5px; }
+        .shortcut-container { margin-bottom: 10px; }
+        .shortcut-number { font-weight: bold; margin-right: 5px; }
         textarea { width: 100%; height: 50px; margin-bottom: 5px; }
         button { margin-right: 5px; }
     </style>
 </head>
 <body>
-    <h3>テンプレート管理</h3>
-    <div id="template-list"></div>
+    <h3>ショートカット管理</h3>
+    <div id="shortcut-list"></div>
     <button id="save">Save</button>
     <button id="cancel">Cancel</button>
     <script src="popup.js"></script>
 </body>
 </html>
-
