--- a/popup.html
+++ b/popup.html
@@ -3,18 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ショートカット管理</title>
+    <title>ショートカット</title>
     <style>
-        body { font-family: Arial, sans-serif; padding: 10px; width: 300px; }
-        .shortcut-container { margin-bottom: 10px; }
-        .shortcut-number { font-weight: bold; margin-right: 5px; }
-        textarea { width: 100%; height: 50px; margin-bottom: 5px; }
-        button { margin-right: 5px; }
+        body { 
+            font-family: Arial, sans-serif; 
+            padding: 10px; 
+            width: 600px;
+            height: 100%;
+        }
+        .shortcut-container { 
+            margin-bottom: 10px;
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+        }
+        .shortcut-header {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+        }
+        .shortcut-number { 
+            font-weight: bold; 
+        }
+        .key-display {
+            background: #f0f0f0;
+            padding: 5px 10px;
+            border-radius: 4px;
+            font-family: monospace;
+        }
+        .key-change-button {
+            padding: 5px 10px;
+            cursor: pointer;
+        }
+        .key-input-mode {
+            background: #fff4f4;
+            padding: 10px;
+            border-radius: 4px;
+            display: none;
+            flex-direction: column;
+            gap: 10px;
+        }
+        .key-input-mode.active {
+            display: flex;
+        }
+        .key-input-mode .button-group {
+            display: flex;
+            gap: 10px;
+            justify-content: flex-end;
+        }
+        textarea { 
+            width: 100%; 
+            min-height: 100px;
+            overflow: hidden;
+            resize: none; 
+        }
+        button { 
+            margin-right: 5px; 
+        }
+        .unsaved-changes {
+            font-style: italic;
+            color: #666;
+            font-size: 0.9em;
+            margin-top: 5px;
+        }
+        .status-indicator {
+            display: none;
+            padding: 5px;
+            margin-top: 10px;
+            text-align: center;
+            border-radius: 4px;
+        }
+        .status-indicator.unsaved {
+            display: block;
+            background-color: #fff3cd;
+            color: #856404;
+        }
+        .status-indicator.saved {
+            display: block;
+            background-color: #d4edda;
+            color: #155724;
+        }
     </style>
 </head>
 <body>
-    <h3>ショートカット管理</h3>
+    <h3>ショートカット</h3>
     <div id="shortcut-list"></div>
+    <div id="status-indicator" class="status-indicator"></div>
     <button id="save">Save</button>
     <button id="cancel">Cancel</button>
     <script src="popup.js"></script>
